add lorem in main

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <img id="banner" src="banner.jpg">
      <div class="principal">
         <h2 class= "título-centralizado"> Sobre a Barbearia Alura</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae a facilis laborum cum quam sed sit doloribus consequatur ipsam voluptates sunt reprehenderit ab nam quod voluptatem vel omnis, accusamus corporis?</p>
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
         <p id="missao"><em> Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
